metadata-classic/objects/Comments__c.object
<CustomObject>
    <description>JIRA Comments</description>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bug__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bug</label>
        <referenceTo>Bug__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedInJira__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created In Jira?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SupportProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Process</label>
        <referenceTo>SupportProcess__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Comment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Body__c</columns>
        <columns>Bug__c</columns>
        <columns>CreatedInJira__c</columns>
        <columns>SupportProcess__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>